--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,32 +1,44 @@
 :root {
-  /* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  font-weight: 400;
+  --font-family: 'Fredoka', sans-serif;
+  --second-family: 'Nunito', sans-serif;
+  --third-family: 'Inter', sans-serif;
+}
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+:root {
+  --grey2: #535252;
+  --grey: #d9d9d9;
+  --black: #000;
+  --green: #7ead73;
+  --blue2: #1990ff;
+  --orange: #fd9a18;
+  --red: #8d0000;
+  --white: #fff;
+  --blue: #91c4ff;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+* {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
   display: flex;
   flex-direction: column;
+  background-color: var(--green);
   min-width: 100vw;
   min-height: 100vh;
   margin: 0;
 }
 
-main {
-  flex-grow: 1;
-}
-main:has(.back-link) {
-  text-align: center;
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
