Add header functionality, new sections, and SVG sprite icons
- Implemented burger menu toggle functionality in header.js
- Imported header.js in main.js
- Created new HTML sections: About, Game Info, Game Modes, How To Play, Play Now, Upgrades, and Why You'll Love It
- Added SVG sprite icons for social media and other UI elements

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,55 @@
 <header class="header">
-  <div class="container">
-    Header
+  <div class="container header-container">
+    <a href="/index.html" class="logo-link">Pizza Rush</a>
+    <nav class="header-nav">
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a href="#about" class="nav-link">About</a>
+        </li>
+        <li class="nav-item">
+          <a href="#features" class="nav-link">Features</a>
+        </li>
+        <li class="nav-item">
+          <a href="#how-to-play" class="nav-link">How to Play</a>
+        </li>
+        <li class="nav-item">
+          <a href="#game-modes" class="nav-link">Game Modes</a>
+        </li>
+        <li class="nav-item">
+          <a href="#why-youll-love-it" class="nav-link">Why You'll Love It</a>
+        </li>
+        <li class="nav-item">
+          <a href="#upgrades" class="nav-link">Upgrades</a>
+        </li>
+      </ul>
+      <ul class="nav-list">
+        <li class="nav-item">
+          <a href="#tips" class="nav-link">Tips</a>
+        </li>
+        <li class="nav-item">
+          <a href="#community" class="nav-link">Community</a>
+        </li>
+        <li class="nav-item">
+          <a href="#reviews" class="nav-link">Reviews</a>
+        </li>
+        <li class="nav-item">
+          <a href="#game-info" class="nav-link">Game Info</a>
+        </li>
+        <li class="nav-item">
+          <a href="#play-now" class="nav-link">Play Now</a>
+        </li>
+        <li class="nav-item">
+          <a href="#contact" class="nav-link">Contact</a>
+        </li>
+      </ul>
+    </nav>
+
+    <div class="burger-menu">
+      <div class="burger" data-action="toggle-burger">
+        <span class="burger-line"></span>
+        <span class="burger-line"></span>
+        <span class="burger-line"></span>
+      </div>
+    </div>
   </div>
 </header>
