--- a/src/partials/community.html
+++ b/src/partials/community.html
@@ -1,3 +1,3 @@
-<section class="community-section">
+<section class="community-section" id="community">
   <div class="container">Community Section</div>
 </section>
