--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -1,3 +1,3 @@
-<section class="contact-section">
+<section class="contact-section" id="contact">
   <div class="container">Contact Section</div>
 </section>
