--- a/src/partials/features.html
+++ b/src/partials/features.html
@@ -1,3 +1,3 @@
-<section class="features-section">
+<section class="features-section" id="features">
   <div class="container">Features Section</div>
 </section>
