--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,3 +1,3 @@
-<section class="reviews-section">
+<section class="reviews-section" id="reviews">
   <div class="container">Reviews Section</div>
 </section>
