--- a/src/css/header.css
+++ b/src/css/header.css
@@ -80,7 +80,14 @@
   .header {
     background-color: var(--green);
     box-shadow: none;
+    transition: background-color 0.3s ease;
   }
+  /* .header[data-bg='green'] {
+    background-color: var(--green);
+  }
+  .header[data-bg='orange'] {
+    background-color: var(--orange);
+  } */
   .header-container {
     height: 100px;
   }
