Fix image paths in hero section for correct loading

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,6 @@
 <section class="hero-section" data-bg="orange">
   <div class="container hero-container">
-    <img src="../img/pizza-slice2x.webp" class="hero-slice" alt="Pizz Slice"/>
+    <img src="/img/pizza-slice2x.webp" class="hero-slice" alt="Pizz Slice"/>
     <div class="hero-text">
       <div class="hero-title-wrapper">
         <h1 class="hero-title">Pizza Rush</h1>
@@ -20,12 +20,12 @@
     <div class="hero-image">
       <picture>
         <source
-          srcset="../img/hero1x.webp 1x, ../img/hero2x.webp 2x"
+          srcset="/img/hero1x.webp 1x, /img/hero2x.webp 2x"
           type="image/webp"
         />
         <img
-          src="../img/hero1x.webp"
-          srcset="../img/hero1x.webp 1x, ../img/hero2x.webp 2x"
+          src="/img/hero1x.webp"
+          srcset="/img/hero1x.webp 1x, /img/hero2x.webp 2x"
           alt="Pizza Rush Game Image"
           loading="lazy"
           decoding="async"
