--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -125,6 +125,7 @@
     font-size: 16px;
     text-align: center;
     color: var(--white);
+    border: 1px solid var(--red);
     transition: all 0.3s ease-in-out;
   }
   .hero-watch-btn:hover,
