Create About section

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,3 +1,22 @@
-<section class="about-section" id="about">
-  <div class="container">About Section</div>
+<section class="about-section" id="about" data-bg="green">
+  <div class="about-section-wrapper">
+    <div class="container about-container">
+      <img class="about-pizza-top" src="/img/pizza2x.webp" alt="Pizza image" />
+      <div class="about-pizza-bottom-wrapper">
+        <img
+          class="about-pizza-bottom"
+          src="/img/pizza2x.webp"
+          alt="Pizza image"
+        />
+      </div>
+      <h2 class="about-title">Welcome to Pizza Rush!</h2>
+      <p class="about-description">
+        Get ready for a chaotic yet thrilling experience where timing, strategy,
+        and quick thinking make all the difference. Pizza Rush blends restaurant
+        management with real-time action as you serve, cook, and upgrade your
+        way to pizza stardom. From self-service stations to dough machines,
+        every second counts.
+      </p>
+    </div>
+  </div>
 </section>
