--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,8 +8,10 @@
 @import url('./reset.css');
 @import url('./base.css');
 @import url('./container.css');
+@import url('./animations.css');
 
 /* Sections style */
 @import url('./header.css');
 @import url('./hero.css');
+@import url('./about.css');
 /* @import url('./footer.css'); */
