--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -1,3 +1,13 @@
 <section class="contact-section" id="contact">
-  <div class="container">Contact Section</div>
+  <div class="container contact-container">
+    <h2 class="contact-h2"> Contact & Support</h2>
+    <p class="contact-text">Need help or want to share feedback?</p>
+    <p class="contact-email">Email us at: info@rushpulse.online</p>
+    <img
+      class="contact-img"
+      src="/img/contact/email-fast-outline.png"
+      alt="email"
+    />
+    <p class="contact-text">We’d love to hear from you!</p>
+  </div>
 </section>
