--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,21 @@
 <footer class="footer">
-  <div class="container">
-    Footer
+  <div class="container footer-container">
+    <div class="content-container">
+      <div class="links-div">
+        <a class="footer-link" href="#">Terms and Conditions</a>
+        <a class="footer-link" href="#">Contact & Support</a>
+        <a class="footer-link" href="#">Privacy Policy</a>
+      </div>
+      <p class="footer-all-rights">
+        © 2025 RushPulse Games. All rights reserved.
+      </p>
+      <p class="footer-pizza-rush">
+        Pizza Rush and all associated content are trademarks of RushPulse Games.
+      </p>
+      <p class="footer-pizza-rush">For support, press, or business</p>
+      <p class="footer-pizza-rush">inquiries, contact:</p>
+      <p class="footer-pizza-rush">info@rushpulse.online</p>
+      <p class="footer-pizza-rush">Website powered by RushPulse Studios</p>
+    </div>
   </div>
 </footer>
