--- a/src/partials/game-info.html
+++ b/src/partials/game-info.html
@@ -1,3 +1,12 @@
 <section class="game-info-section" id="game-info">
-  <div class="container">Game Info Section</div>
+  <div class="container game-info-container">
+    <h2 class="game-info-h2">Technical Details</h2>
+    <div class="game-info-contain-div">
+      <p class="game-info-p game-info-p1">Version: 0.0.2</p>
+      <p class="game-info-p game-info-p2">Last Updated: August 29, 2024</p>
+      <p class="game-info-p game-info-p3">Game Category: Casual / Arcade</p>
+      <p class="game-info-p game-info-p4">Requires Android: 8.0 and up</p>
+      <p class="game-info-p">Downloads: 1,000+</p>
+    </div>
+  </div>
 </section>
