--- a/src/partials/how-to-play.html
+++ b/src/partials/how-to-play.html
@@ -1,3 +1,3 @@
 <section class="how-to-play-section" id="how-to-play">
-  <div class="container">How To Play Section</div>
+  <div class="container how-to-play-container">How To Play Section</div>
 </section>
