--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,4 +14,4 @@
 @import url('./header.css');
 @import url('./hero.css');
 @import url('./about.css');
-/* @import url('./footer.css'); */
+/* @import url('./features.css'); */
