--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,3 +20,4 @@
 @import url('./play-now.css');
 @import url('./how-to-play.css');
 @import url('./game-info.css');
+@import url('./community.css');
