--- a/src/partials/community.html
+++ b/src/partials/community.html
@@ -1,3 +1,44 @@
 <section class="community-section" id="community">
-  <div class="container">Community Section</div>
+  <div class="community-wrapper">
+    <div class="container community-container">
+      <h2 class="community-h2">Join the Pizza Rush Community</h2>
+      <p class="community-top-p">
+        Share your fastest runs, funniest pizza fails, and best kitchen
+        upgrades!
+      </p>
+
+      <p class="community-top-p-follow">Follow us on:</p>
+      <div class="community-sosial">
+        <div class="community-sosial-current">
+          <svg class="community-sosial-svg">
+            <use href="/sprite.svg#facebook"></use>
+          </svg>
+          <p class="community-sosial-p">Facebook</p>
+        </div>
+        <div class="community-sosial-current">
+          <svg class="community-sosial-svg">
+            <use href="/sprite.svg#instagram"></use>
+          </svg>
+          <p class="community-sosial-p">Instagram</p>
+        </div>
+        <div class="community-sosial-current">
+          <svg class="community-sosial-svg">
+            <use href="/sprite.svg#twitter"></use>
+          </svg>
+          <p class="community-sosial-p">Twitter / X</p>
+        </div>
+        <div class="community-sosial-current">
+          <svg class="community-sosial-svg">
+            <use href="/sprite.svg#youtube"></use>
+          </svg>
+          <p class="community-sosial-p">YouTube</p>
+        </div>
+      </div>
+      <p class="community-sosial-use-p">Use hashtags to get featured:</p>
+      <p class="community-sosial-bottom-p">
+        #PizzaRushGame #PizzaMaster #KitchenChaos #RushPulseGames
+        #UltimatePizzaChallenge
+      </p>
+    </div>
+  </div>
 </section>
