--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -3,11 +3,7 @@
     <h2 class="contact-h2"> Contact & Support</h2>
     <p class="contact-text">Need help or want to share feedback?</p>
     <p class="contact-email">Email us at: info@rushpulse.online</p>
-    <img
-      class="contact-img"
-      src="/img/contact/email-fast-outline.png"
-      alt="email"
-    />
+    <svg class="contact-email-svg"><use href="/sprite.svg#mail"></use></svg>
     <p class="contact-text">We’d love to hear from you!</p>
   </div>
 </section>
