--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,13 +9,14 @@
       <p class="footer-all-rights">
         © 2025 RushPulse Games. All rights reserved.
       </p>
+
       <p class="footer-pizza-rush">
-        Pizza Rush and all associated content are trademarks of RushPulse Games.
+        Pizza Rush and all associated content are trademarks of RushPulse<br />
+        Games.<br />
+        For support, press, or business inquiries, contact:
+        info@rushpulse.online<br />
+        Website powered by RushPulse Studios
       </p>
-      <p class="footer-pizza-rush">For support, press, or business</p>
-      <p class="footer-pizza-rush">inquiries, contact:</p>
-      <p class="footer-pizza-rush">info@rushpulse.online</p>
-      <p class="footer-pizza-rush">Website powered by RushPulse Studios</p>
     </div>
   </div>
 </footer>
