--- a/src/partials/play-now.html
+++ b/src/partials/play-now.html
@@ -1,12 +1,14 @@
 <section class="play-now-section" id="play-now">
-  <div class="container play-now-container">
-    <h2 class="play-now-h2">
-      Do You Have What It Takes to Handle the Pizza Rush?
-    </h2>
-    <p class="play-now-p">
-      Join the delivery frenzy and rise through the pizza ranks. Serve fast,
-      upgrade smart, and dominate the kitchen.
-    </p>
-    <img src="/img/play-now/app-store.png" alt="image" />
+  <div class="play-now-wrapper">
+    <div class="container play-now-container">
+      <h2 class="play-now-h2">
+        Do You Have What It Takes to Handle the Pizza Rush?
+      </h2>
+      <p class="play-now-p">
+        Join the delivery frenzy and rise through the pizza ranks. Serve fast,
+        upgrade smart, and dominate the kitchen.
+      </p>
+      <svg class="play-now-svg"><use href="/sprite.svg#link"></use></svg>
+    </div>
   </div>
 </section>
