Created animated Pizza for features section

--- a/src/partials/features.html
+++ b/src/partials/features.html
@@ -3,50 +3,60 @@
     <h2 class="features-title">Key Features</h2>
     <div class="features-pizza">
       <div class="features-pizza-slice">
-        <svg class="features-pizza-icon" width="38" height="37">
-          <use href="/sprite.svg#fire"></use>
-        </svg>
-        <h3 class="features-pizza-title">Fast-Paced Arcade Action:</h3>
-        <p class="features-pizza-text">
-          Collect, cook, and serve under pressure.
-        </p>
+        <div class="features-pizza-slice-content">
+          <svg class="features-pizza-icon" width="38" height="37">
+            <use href="/sprite.svg#fire"></use>
+          </svg>
+          <h3 class="features-pizza-title">Fast-Paced Arcade Action:</h3>
+          <p class="features-pizza-text">
+            Collect, cook, and serve under pressure.
+          </p>
+        </div>
       </div>
       <div class="features-pizza-slice">
-        <svg class="features-pizza-icon" width="37" height="37">
-          <use href="/sprite.svg#cheese"></use>
-        </svg>
-        <h3 class="features-pizza-title">Self-Service Chaos:</h3>
-        <p class="features-pizza-text">
-          Let customers make their own pizzas in an unpredictable twist.
-        </p>
+        <div class="features-pizza-slice-content">
+          <svg class="features-pizza-icon" width="37" height="37">
+            <use href="/sprite.svg#cheese"></use>
+          </svg>
+          <h3 class="features-pizza-title">Self-Service Chaos:</h3>
+          <p class="features-pizza-text">
+            Let customers make their own pizzas in an unpredictable twist.
+          </p>
+        </div>
       </div>
       <div class="features-pizza-slice">
-        <svg class="features-pizza-icon" width="37" height="25">
-          <use href="/sprite.svg#money"></use>
-        </svg>
-        <h3 class="features-pizza-title">Upgrade System:</h3>
-        <p class="features-pizza-text">
-          Use your hard-earned tips to improve speed, machines, and customer
-          flow.
-        </p>
+        <div class="features-pizza-slice-content">
+          <svg class="features-pizza-icon" width="37" height="25">
+            <use href="/sprite.svg#money"></use>
+          </svg>
+          <h3 class="features-pizza-title">Upgrade <br />System:</h3>
+          <p class="features-pizza-text">
+            Use your hard-earned tips to improve speed, machines, and customer
+            flow.
+          </p>
+        </div>
       </div>
       <div class="features-pizza-slice">
-        <svg class="features-pizza-icon" width="37" height="37">
-          <use href="/sprite.svg#people"></use>
-        </svg>
-        <h3 class="features-pizza-title">Endless Orders:</h3>
-        <p class="features-pizza-text">
-          Can you survive the waves of pizza-hungry customers?
-        </p>
+        <div class="features-pizza-slice-content">
+          <svg class="features-pizza-icon" width="37" height="37">
+            <use href="/sprite.svg#people"></use>
+          </svg>
+          <h3 class="features-pizza-title">Endless Orders:</h3>
+          <p class="features-pizza-text">
+            Can you survive the waves of pizza-hungry customers?
+          </p>
+        </div>
       </div>
       <div class="features-pizza-slice">
-        <svg class="features-pizza-icon" width="37" height="37">
-          <use href="/sprite.svg#book"></use>
-        </svg>
-        <h3 class="features-pizza-title">Easy to Learn, Hard to Master:</h3>
-        <p class="features-pizza-text">
-          Simple controls with deep strategic options.
-        </p>
+        <div class="features-pizza-slice-content">
+          <svg class="features-pizza-icon" width="37" height="37">
+            <use href="/sprite.svg#book"></use>
+          </svg>
+          <h3 class="features-pizza-title">Easy to Learn, Hard to Master:</h3>
+          <p class="features-pizza-text">
+            Simple controls with deep strategic options.
+          </p>
+        </div>
       </div>
     </div>
   </div>
