--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -21,3 +21,4 @@
 @import url('./how-to-play.css');
 @import url('./game-info.css');
 @import url('./community.css');
+@import url('./reviews.css');
