--- a/src/partials/how-to-play.html
+++ b/src/partials/how-to-play.html
@@ -1,3 +1,140 @@
 <section class="how-to-play-section" id="how-to-play">
-  <div class="container how-to-play-container">How To Play Section</div>
+  <div class="container how-to-play-container">
+    <h2 class="how-to-play-title">How to Play</h2>
+    <div class="how-to-play-swiper swiper">
+      <div class="swiper-wrapper">
+        <div class="how-to-play-slide swiper-slide">
+          <div class="how-to-play-slide-text">
+            <h3 class="how-to-play-number">1</h3>
+            <p class="how-to-play-description">
+              Collect dough from customers and place it in the machine to start
+              pizza production.
+            </p>
+          </div>
+          <picture class="how-to-play-slide-image">
+            <source
+              srcset="/img/first-slide1x.webp 1x, /img/first-slide2x.webp 2x"
+              type="image/webp"
+            />
+            <img
+              src="/img/first-slide1x.webp"
+              srcset="/img/first-slide1x.webp 1x, /img/first-slide2x.webp 2x"
+              alt="Ho to Play ilustration slide"
+              loading="lazy"
+              decoding="async"
+              width="286"
+              height="585"
+            />
+          </picture>
+        </div>
+        <div class="how-to-play-slide swiper-slide">
+          <div class="how-to-play-slide-text">
+            <h3 class="how-to-play-number">2</h3>
+            <p class="how-to-play-description">
+              Move fast — customers won't wait forever!
+            </p>
+          </div>
+          <picture class="how-to-play-slide-image">
+            <source
+              srcset="/img/second-slide1x.webp 1x, /img/second-slide2x.webp 2x"
+              type="image/webp"
+            />
+            <img
+              src="/img/second-slide1x.webp"
+              srcset="/img/second-slide1x.webp 1x, /img/second-slide2x.webp 2x"
+              alt="Ho to Play ilustration slide"
+              loading="lazy"
+              decoding="async"
+              width="286"
+              height="585"
+            />
+          </picture>
+        </div>
+        <div class="how-to-play-slide swiper-slide">
+          <div class="how-to-play-slide-text">
+            <h3 class="how-to-play-number">3</h3>
+            <p class="how-to-play-description">
+              Guide them to the self-service room for creative, hands-on pizza
+              making.
+            </p>
+          </div>
+          <picture class="how-to-play-slide-image">
+            <source
+              srcset="/img/third-slide1x.webp 1x, /img/third-slide2x.webp 2x"
+              type="image/webp"
+            />
+            <img
+              src="/img/third-slide1x.webp"
+              srcset="/img/third-slide1x.webp 1x, /img/third-slide2x.webp 2x"
+              alt="Ho to Play ilustration slide"
+              loading="lazy"
+              decoding="async"
+              width="286"
+              height="585"
+            />
+          </picture>
+        </div>
+        <div class="how-to-play-slide swiper-slide">
+          <div class="how-to-play-slide-text">
+            <h3 class="how-to-play-number">4</h3>
+            <p class="how-to-play-description">
+              Earn tips, avoid chaos, and upgrade your kitchen gear.
+            </p>
+          </div>
+          <picture class="how-to-play-slide-image">
+            <source
+              srcset="/img/fourth-slide1x.webp 1x, /img/fourth-slide2x.webp 2x"
+              type="image/webp"
+            />
+            <img
+              src="/img/fourth-slide1x.webp"
+              srcset="/img/fourth-slide1x.webp 1x, /img/fourth-slide2x.webp 2x"
+              alt="Ho to Play ilustration slide"
+              loading="lazy"
+              decoding="async"
+              width="286"
+              height="585"
+            />
+          </picture>
+        </div>
+        <div class="how-to-play-slide swiper-slide">
+          <div class="how-to-play-slide-text">
+            <h3 class="how-to-play-number">5</h3>
+            <p class="how-to-play-description">
+              Stay calm and serve hot — it’s the only way to win the Pizza Rush.
+            </p>
+          </div>
+          <picture class="how-to-play-slide-image">
+            <source
+              srcset="/img/fifth-slide1x.webp 1x, /img/fifth-slide2x.webp 2x"
+              type="image/webp"
+            />
+            <img
+              src="/img/fifth-slide1x.webp"
+              srcset="/img/fifth-slide1x.webp 1x, /img/fifth-slide2x.webp 2x"
+              alt="Ho to Play ilustration slide"
+              loading="lazy"
+              decoding="async"
+              width="286"
+              height="585"
+            />
+          </picture>
+        </div>
+      </div>
+
+      <div class="how-to-play-swiper-buttons">
+        <div class="how-to-play-swiper-button-prev">
+          <svg class="swiper-arrow-icon" width="71" height="71">
+            <use href="/sprite.svg#arrow-left"></use>
+          </svg>
+        </div>
+        <div class="how-to-play-swiper-button-next">
+          <svg class="swiper-arrow-icon" width="71" height="71">
+            <use href="/sprite.svg#arrow-right"></use>
+          </svg>
+        </div>
+        <div class="how-to-play-swiper-pagination"></div>
+      </div>
+    </div>
+  </div>
 </section>
