--- a/src/css/base.css
+++ b/src/css/base.css
@@ -28,10 +28,10 @@ body {
   min-width: 100vw;
   min-height: 100vh;
   margin: 0;
-  overflow-x: hidden;
 }
 section {
   scroll-margin-top: 100px;
+  overflow: hidden;
 }
 
 .visually-hidden {
