--- a/src/partials/community.html
+++ b/src/partials/community.html
@@ -1,4 +1,4 @@
-<section class="community-section" id="community">
+<section class="community-section" id="community" data-bg="green">
   <div class="community-wrapper">
     <div class="container community-container">
       <h2 class="community-h2">Join the Pizza Rush Community</h2>
