--- a/src/partials/game-info.html
+++ b/src/partials/game-info.html
@@ -1,4 +1,4 @@
-<section class="game-info-section" id="game-info">
+<section class="game-info-section" id="game-info" data-bg="green">
   <div class="container game-info-container">
     <h2 class="game-info-h2">Technical Details</h2>
     <div class="game-info-contain-div">
