--- a/src/partials/game-modes.html
+++ b/src/partials/game-modes.html
@@ -1,3 +1,3 @@
-<section class="game-modes-section" id="game-modes">
+<section class="game-modes-section" id="game-modes" data-bg="green">
   <div class="container">Game Modes Section</div>
 </section>
