--- a/src/partials/how-to-play.html
+++ b/src/partials/how-to-play.html
@@ -1,4 +1,4 @@
-<section class="how-to-play-section" id="how-to-play">
+<section class="how-to-play-section" id="how-to-play" data-bg="orange">
   <div class="container how-to-play-container">
     <h2 class="how-to-play-title">How to Play</h2>
     <div class="how-to-play-swiper swiper">
