--- a/src/partials/play-now.html
+++ b/src/partials/play-now.html
@@ -1,4 +1,4 @@
-<section class="play-now-section" id="play-now">
+<section class="play-now-section" id="play-now" data-bg="green">
   <div class="play-now-wrapper">
     <div class="container play-now-container">
       <h2 class="play-now-h2">
