--- a/src/partials/upgrades.html
+++ b/src/partials/upgrades.html
@@ -1,3 +1,3 @@
-<section class="upgrades-section" id="upgrades">
+<section class="upgrades-section" id="upgrades" data-bg="green">
   <div class="container">Upgrades Section</div>
 </section>
