--- a/src/partials/why-youll-love-it.html
+++ b/src/partials/why-youll-love-it.html
@@ -1,3 +1,7 @@
-<section class="why-youll-love-it-section" id="why-youll-love-it">
+<section
+  class="why-youll-love-it-section"
+  id="why-youll-love-it"
+  data-bg="green"
+>
   <div class="container">Why you'll Love It Section</div>
 </section>
