--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section class="reviews-section" id="reviews">
+<section class="reviews-section" id="reviews" data-bg="green">
   <div class="container reviews-container">
     <h2 class="reviews-h2">Reviews from Players</h2>
     <div class="swiper reviews-swiper">
