--- a/src/partials/tips.html
+++ b/src/partials/tips.html
@@ -1,3 +1,3 @@
-<section class="tips-section" id="tips">
+<section class="tips-section" id="tips" data-bg="green">
   <div class="container">Tips Section</div>
 </section>
