--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header" data-bg="green">
   <div class="container header-container">
-    <a href="../index.html" class="logo-link">Pizza Rush</a>
+    <a href="./index.html" class="logo-link">Pizza Rush</a>
     <nav class="header-nav">
       <ul class="nav-list">
         <li class="nav-item">
