--- a/src/partials/how-to-play.html
+++ b/src/partials/how-to-play.html
@@ -19,7 +19,7 @@
             <img
               src="/img/first-slide1x.webp"
               srcset="/img/first-slide1x.webp 1x, /img/first-slide2x.webp 2x"
-              alt="Ho to Play ilustration slide"
+              alt="How to Play ilustration slide"
               loading="lazy"
               decoding="async"
               width="286"
@@ -42,7 +42,7 @@
             <img
               src="/img/second-slide1x.webp"
               srcset="/img/second-slide1x.webp 1x, /img/second-slide2x.webp 2x"
-              alt="Ho to Play ilustration slide"
+              alt="How to Play ilustration slide"
               loading="lazy"
               decoding="async"
               width="286"
@@ -66,7 +66,7 @@
             <img
               src="/img/third-slide1x.webp"
               srcset="/img/third-slide1x.webp 1x, /img/third-slide2x.webp 2x"
-              alt="Ho to Play ilustration slide"
+              alt="How to Play ilustration slide"
               loading="lazy"
               decoding="async"
               width="286"
