--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -112,7 +112,9 @@
     font-family: var(--font-family);
     font-weight: 500;
     font-size: 16px;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: var(--white);
     border: 1px solid var(--red);
     transition: all 0.3s ease-in-out;
