--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -13,8 +13,8 @@
         you fast enough to keep up?
       </p>
       <div class="hero-buttons">
-        <button class="hero-watch-btn">Watch Trailer</button>
-        <button class="hero-play-btn">Play Now</button>
+        <a href="https://www.youtube.com/watch?v=agA3zH3jpyY" target="_blank" rel="noopener noreferrer" class="hero-watch-btn">Watch Trailer</a>
+        <a href="https://play.google.com/store/apps/details?id=com.yamystudio.pizzarush&hl=en&gl=us " target="_blank" rel="noopener noreferrer" class="hero-play-btn">Play Now</a>
       </div>
     </div>
     <div class="hero-image">
